add HTML overview class

--- a/index.html
+++ b/index.html
@@ -7,7 +7,24 @@
   <script src="js/scripts.js"></script>
   <title>Drinks</title>
 </head>
+<body>
+  <div class="container">
+    <div class="overview">
+      <h1>P.L.G.</h1>
+      <h2>Programming Language Suggester</h2>
+      <h4>A quick quiz to help you decide a programming language to learn</h4>
+    </div>
+    <div class="questions">
+      <form>
+        <div class="questionsInForm">
+          <div class="mostLiked">
 
+          </div>
+        </div>
+      </form>
+
+    </div>
+  </div>
 </body>
 </html>
 
