add second question

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.5.1.js"></script>
   <script src="js/scripts.js"></script>
-  <title>Drinks</title>
+  <title>Programming Language Suggester</title>
 </head>
 <body>
   <div class="container">
@@ -25,7 +25,26 @@
               <option>Banking / Insurance / Inventory Control</option>
             </select>
           </div>"
-
+          <div class="yesOrNo">
+            <h3>If you had to answer Yes or No, would you?</h3>
+            <div class="radio">
+              <label>
+                <input type="radio" name="wouldYou" value="y">
+                Yes
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="wouldYou" value="n">
+                No
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="wouldYou" value="m" checked>
+                Maybe
+              </label>
+            </div>
           </div>
         </div>
       </form>
