add thrid question

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <option>Artifical Intellegence</option>
               <option>Banking / Insurance / Inventory Control</option>
             </select>
-          </div>"
+          </div>
           <div class="yesOrNo">
             <h3>If you had to answer Yes or No, would you?</h3>
             <div class="radio">
@@ -45,6 +45,12 @@
                 Maybe
               </label>
             </div>
+          </div>
+          <div class="hateDay">
+            <h3>What day do you hate?</h3>
+            <div class="form-group">
+              <label for="hateDay">Day you hate:</label>
+              <input id="hateDay" class="form-control" type="date">
           </div>
         </div>
       </form>
