added fourth question

--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
               <label for="hateDay">Day you hate:</label>
               <input id="hateDay" class="form-control" type="date">
           </div>
+          <div class="soulColor">
+            <h3>Pick the color the represents your soul</h3>
+            <div class="form-group">
+              <label for="color">Color of soul</label>
+              <input id="color" class="form-control" type="color">
+            </div>
+          </div>
         </div>
       </form>
 
