add fifth question

--- a/index.html
+++ b/index.html
@@ -59,6 +59,16 @@
               <input id="color" class="form-control" type="color">
             </div>
           </div>
+          <div calss="favoritePrime">
+            <h3>Pick your favorite prime from the list</h3>
+            <select class="form-contrl" id="favoritePrime">
+              <option>7</option>
+              <option>Rib</option>
+              <option>Optimist</option>
+              <option>71</option>
+              <option>Amazon</option>
+            </select>
+          </div>
         </div>
       </form>
 
