add HTML for result id's

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="js/scripts.js"></script>
   <title>Programming Language Suggester</title>
 </head>
+<!-- overview -->
 <body>
   <div class="container">
     <div class="overview">
@@ -14,6 +15,7 @@
       <h2>Programming Language Suggester</h2>
       <h5>A quick quiz to help you decide a programming language to learn</h5>
     </div>
+<!-- questions -->
     <div class="questions">
       <form>
         <div class="questionsInForm">
@@ -71,8 +73,20 @@
           </div>
         </div>
       </form>
-
     </div>
+  </div>
+<!-- result -->
+  <div id="result">
+    <h3>You should get into:</h3>
+      <div id="Swift">
+
+      </div>
+      <div id="Python">
+
+      </div>
+      <div class="COBOL">
+
+      </div>
   </div>
 </body>
 </html>
