check div question class by way of CSS

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             <div class="form-group">
               <label for="hateDay">Day you hate:</label>
               <input id="hateDay" class="form-control" type="date">
+            </div>
           </div>
           <div class="soulColor">
             <h3>Pick the color the represents your soul</h3>
@@ -61,8 +62,8 @@
               <input id="color" class="form-control" type="color">
             </div>
           </div>
-          <div calss="favoritePrime">
-            <h3>Pick your favorite prime from the list</h3>
+          <div class="favoritePrime">
+            <h3>Pick your favorite prime</h3>
             <select class="form-contrl" id="favoritePrime">
               <option>7</option>
               <option>Rib</option>
