add 1st if statement in JS

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
           <div class="mostLiked">
             <h3>Which do you like the most?</h3>
             <select class="form-control" id="mostLiked">
-              <option>Apple devices</option>
-              <option>Artifical Intellegence</option>
-              <option>Banking / Insurance / Inventory Control</option>
+              <option value="apple">Apple devices</option>
+              <option value="ai">Artifical Intellegence</option>
+              <option value="banking">Banking / Insurance / Inventory Control</option>
             </select>
           </div>
           <div class="yesOrNo">
@@ -80,13 +80,13 @@
   <div id="result">
     <h3>You should get into:</h3>
       <div id="Swift">
-
+        <h3>Swift!</h3>
       </div>
       <div id="Python">
-
+        <h3>Python!</h3>
       </div>
       <div class="COBOL">
-
+        <h3>COBOL!</h3>
       </div>
   </div>
 </body>
