--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
               <option>Amazon</option>
             </select>
           </div>
+          <div class="buttons">
+            <button type="button" class="btn btn-primary">Show result</button>
+            <button type="button" class="btn btn-secondary">Reset</button>
+
+          </div>
         </div>
       </form>
     </div>
