--- a/index.html
+++ b/index.html
@@ -73,26 +73,26 @@
             </select>
           </div>
           <div class="buttons">
-            <button type="button" class="btn btn-primary">Show result</button>
-            <button type="button" class="btn btn-secondary">Reset</button>
-
+            <button type="showResult" class="btn btn-primary">Show result</button>
+            <button type="reset" class="btn btn-secondary">Reset</button>
           </div>
         </div>
       </form>
     </div>
-  </div>
 <!-- result -->
-  <div id="result">
-    <h3>You should get into:</h3>
-      <div id="Swift">
-        <h3>Swift!</h3>
+    <div id="reults">
+      <h3>You should get into:</h3>
+        <div id="swift">
+          <h3>Swift!</h3>
+        </div>
+        <div id="python">
+          <h3>Python!</h3>
+        </div>
+        <div id="cobol">
+          <h3>COBOL!</h3>
+        </div>
       </div>
-      <div id="Python">
-        <h3>Python!</h3>
-      </div>
-      <div class="COBOL">
-        <h3>COBOL!</h3>
-      </div>
+    </div>
   </div>
 </body>
 </html>
