remove HTML comments at bottom

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </form>
     </div>
 <!-- result -->
-    <div id="reults">
+    <div id="reult">
       <h3>You should get into:</h3>
         <div id="swift">
           <h3>Swift!</h3>
@@ -96,27 +96,3 @@
   </div>
 </body>
 </html>
-
-<!-- outlien for project
-
-  min of 5 Q's
-  at least 3 language suggestions
-    GO
-    Python
-    COBOL
-  git commit at least 8 times, be professional
-
-  return results witha branch
-    branch number should = # of language suggestions
-  show and hide branch results with jQuery
-  use form to get input
-  proper variable names
-  CSS style
-
-  Clean code
-  git commit finishes the phrase "It will"
-  README
-    author name
-      
-
-  -->
